[project]
name = "fastapi-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
exclude = [".venv"]
